syntax = "proto3";

package tieba.network;

option java_package = "com.huanchengfly.tieba.core.network.proto";

message Error {
  string error_msg = 2;
  int32 error_code = 1;
  string user_msg = 3;
}
